# structified_enum

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
src/: lib.rs
tests/: 01-discriminant.rs  02-repr.rs  03-impl-debug.rs  04-impl-default.rs  05-impl-eq.rs  06-cfg-attribute.rs  test-compile.rs
tests/failed/: 01-repr-failed.rs  01-repr-failed.stderr  02-unsupported-derive.rs  02-unsupported-derive.stderr  03-repr-failed.stderr  03-unsupported-attribute.rs  03-unsupported-attribute.stderr  04-unsupported-variant.rs  04-unsupported-variant.stderr  06-unsupported-type.rs  06-unsupported-type.stderr  07-discriminant.rs  07-discriminant.stderr
